# StockMarket

./: .gitignore  CMakeLists.txt  README.md  app.js
.cache/clangd/index/: CandleStickData.cpp.2FAA7BCEDDFAC7F4.idx  CandleStickData.hpp.D6949BB0D5501B0D.idx  CandleStickModel.cpp.EA3DFE2E261F3181.idx  CandleStickModel.hpp.14A350D64AA56CAC.idx  StarredSearch.cpp.62EAB5EB6CA226BD.idx  StarredSearch.hpp.3EB907D3DCDC7A0F.idx
backend/: go.mod  main.go
customedModules/: BackGround.qml  Batman.qml  CandleStick.qml  HomeWindow.qml  InputField.qml  MenuPanel.qml  PolarGraph.qml  RoundedImage.qml
frontend/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app_qmltyperegistrations.cpp  cmake_install.cmake  qhot-profile.json
frontend/.cache/clangd/index/: CandleStickData.hpp.D6949BB0D5501B0D.idx  CandleStickModel.cpp.EA3DFE2E261F3181.idx  CandleStickModel.hpp.14A350D64AA56CAC.idx  ComponentCreatorEngine.cpp.B8661E2D9149275A.idx  ComponentCreatorEngine.h.CAA709E396506E1D.idx  FileWatcher.cpp.701DF6DFAE0F4B75.idx  FileWatcher.cpp.AD0C91970D21B2FD.idx  FileWatcher.cpp.F973E6D2FD7955F4.idx  FileWatcher.h.40EB713B0493FCF9.idx  FileWatcher.hpp.0C68B8091E4A788E.idx  FileWatcher.hpp.1981EBA4D1C7564A.idx  HelloWorld.cpp.430D2B089631556B.idx  HelloWorld.hpp.85941110157531C3.idx  StockDataProvider.cpp.39ECC7C30F89832C.idx  StockDataProvider.hpp.93ED0CDDA47FCB48.idx  main.cpp.59BD8F0BF82D79BA.idx  main.cpp.C133A4B27F604445.idx
frontend/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
frontend/.qt/deploy_qml_imports/: app.cmake
frontend/.qt/qml_imports/: app_build.rsp  app_conf.cmake  app_conf.rsp
frontend/.qt/rcc/: app_raw_qml_0.qrc  qmake_StockMarket.qrc  qrc_app_raw_qml_0.cpp  qrc_qmake_StockMarket.cpp
frontend/.rcc/qmlcache/: app_qml_loader_file_list.rsp  app_qmlcache_loader.cpp
frontend/.rcc/qmlcache/app_customedModules/: BackGround_qml.cpp  ButtonImage_qml.cpp  CandleStick_qml.cpp  HomeWindow_qml.cpp  InputField_qml.cpp  Main_qml.cpp  MenuPanel_qml.cpp  Metrics_qml.cpp  PolarGraph_qml.cpp  Profile_qml.cpp  RoundedButton_qml.cpp
frontend/.rcc/qmllint/: app.rsp  app_json.rsp  app_module.rsp
frontend/Debug/: CMakeCache.txt  Makefile  app_qmltyperegistrations.cpp  cmake_install.cmake  compile_commands.json
frontend/Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
frontend/Debug/.qt/deploy_qml_imports/: app.cmake
frontend/Debug/.qt/qml_imports/: app_build.rsp  app_conf.cmake  app_conf.rsp
frontend/Debug/.qt/rcc/: app_raw_qml_0.qrc  qmake_stockMarket.qrc  qrc_app_raw_qml_0.cpp  qrc_qmake_stockMarket.cpp
frontend/Debug/.rcc/qmlcache/: app_qml_loader_file_list.rsp  app_qmlcache_loader.cpp
frontend/Debug/.rcc/qmllint/: app.rsp  app_json.rsp  app_module.rsp
frontend/Debug/app.app/Contents/: Info.plist
frontend/Debug/app_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
frontend/Debug/app_autogen/UVLADIE3JM/: moc_FileWatcher.cpp  moc_FileWatcher.cpp.d
frontend/Debug/meta_types/: app_json_file_list.txt  app_json_file_list.txt.timestamp  qt6app_debug_metatypes.json.gen
frontend/Debug/qmltypes/: app_foreign_types.txt
frontend/Debug/stockMarket/: app_qml_module_dir_map.qrc  qmldir
frontend/Debug/stockMarket/customedModules/: BackGround.qml  ButtonImage.qml  HomeWindow.qml  Main.qml  MenuBar.qml  MenuPanel.qml
frontend/StockMarket/: app.qmltypes  app_qml_module_dir_map.qrc  qmldir
frontend/StockMarket/customedModules/: BackGround.qml  CandleStick.qml  HomeWindow.qml  Main.qml  Metrics.qml
frontend/app_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
frontend/app_autogen/UVLADIE3JM/: moc_FileWatcher.cpp  moc_FileWatcher.cpp.d  moc_FileWatcher.cpp.json  moc_StarredSearch.cpp  moc_StarredSearch.cpp.d  moc_StarredSearch.cpp.json  moc_StockDataProvider.cpp  moc_StockDataProvider.cpp.d  moc_StockDataProvider.cpp.json
frontend/customedModules/: BackGround.qml  ButtonImage.qml  CandleStick.qml  HomeWindow.qml  Main.qml  MenuPanel.qml  Profile.qml  RoundedButton.qml
frontend/meta_types/: app_json_file_list.txt  app_json_file_list.txt.timestamp  qt6app_metatypes.json
frontend/qmltypes/: app_foreign_types.txt
frontend/src/: CandleStickData.hpp  CandleStickModel.cpp  CandleStickModel.hpp  FileWatcher.cpp  HelloWorld.cpp  StarredSearch.cpp  StarredSearch.hpp  StockDataProvider.cpp  StockDataProvider.hpp  main.cpp
src/: CandleStickData.cpp  CandleStickData.hpp  CandleStickModel.cpp  CandleStickModel.hpp  FileWatcher.hpp  HelloWorld.hpp
(+24 files in other folders)
